создал фон хиро

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     <!-- main -->
 
     <main>
-      <section class="section-desissions">
-        <div class="container">
+      <section class="section-desissions overlay">
+        <div class="container ">
           <h1 class="main-title">
             Эффективные решения <br />
             для вашего бизнеса
