--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!-- header -->
+    <!-- ========================header======================== -->
 
     <header class="header-border">
       <div class="container container-header">
