--- a/index.html
+++ b/index.html
@@ -46,12 +46,20 @@
 
 				<ul class="list header-items">
 					<li class="list-pages">
-						<a href="mailto:info@devstudio.com" lang="en" class="contacts-header accent"
-							>info@devstudio.com</a
-						>
+						<a href="mailto:info@devstudio.com" lang="en" class="contacts-header accent">
+							<svg class="header-icons" width="16" height="12">
+								<use href="./images/icons.svg#icon-envelope"></use>
+							</svg>
+							info@devstudio.com
+						</a>
 					</li>
 					<li class="list-pages">
-						<a href="tel:+380961111111" class="contacts-header accent">+38 096 111 11 11</a>
+						<a href="tel:+380961111111" class="contacts-header accent"
+							><svg class="header-icons" width="10" height="16">
+								<use href="./images/icons.svg#icon-smartphone"></use>
+							</svg>
+							+38 096 111 11 11
+						</a>
 					</li>
 				</ul>
 			</div>
@@ -74,24 +82,44 @@
 					<h2 class="visually-hidden">Наши отличия</h2>
 					<ul class="list differences-list">
 						<li class="differences-block">
+							<div class="differences-icon-block">
+								<svg width="70" height="70">
+									<use href="./images/icons.svg#icon-antenna"></use>
+								</svg>
+							</div>
 							<h3 class="differences">Внимание к деталям</h3>
 							<p class="differences-text">
 								Идейные соображения, а также начало повседневной работы по формированию позиции.
 							</p>
 						</li>
 						<li class="differences-block">
+							<div class="differences-icon-block">
+								<svg width="70" height="70">
+									<use href="./images/icons.svg#icon-clock"></use>
+								</svg>
+							</div>
 							<h3 class="differences">Пунктуальность</h3>
 							<p class="differences-text">
 								Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
 							</p>
 						</li>
 						<li class="differences-block">
+							<div class="differences-icon-block">
+								<svg width="70" height="70">
+									<use href="./images/icons.svg#icon-diagram"></use>
+								</svg>
+							</div>
 							<h3 class="differences">Планирование</h3>
 							<p class="differences-text">
 								Равным образом консультация с широким активом в значительной степени обуславливает.
 							</p>
 						</li>
 						<li class="differences-block">
+							<div class="differences-icon-block">
+								<svg width="70" height="70">
+									<use href="./images/icons.svg#icon-astronaut"></use>
+								</svg>
+							</div>
 							<h3 class="differences">Современные технологии</h3>
 							<p class="differences-text">
 								Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -154,28 +182,28 @@
 									<li class="team-social-item">
 										<a href="" class="team-social-link">
 											<svg class="team-social-icon" width="20" height="20">
-												<use href="./images/symbol-defs.svg#icon-instagram"></use>
+												<use href="./images/icons.svg#icon-instagram"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="team-social-item">
 										<a href="" class="team-social-link"
 											><svg class="team-social-icon" width="20" height="20">
-												<use href="./images/symbol-defs.svg#icon-twitter"></use>
+												<use href="./images/icons.svg#icon-twitter"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="team-social-item">
 										<a href="" class="team-social-link"
 											><svg class="team-social-icon" width="20" height="20">
-												<use href="./images/symbol-defs.svg#icon-facebook"></use>
+												<use href="./images/icons.svg#icon-facebook"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="team-social-item">
 										<a href="" class="team-social-link"
 											><svg class="team-social-icon" width="20" height="20">
-												<use href="./images/symbol-defs.svg#icon-linkedin"></use>
+												<use href="./images/icons.svg#icon-linkedin"></use>
 											</svg>
 										</a>
 									</li>
@@ -197,28 +225,28 @@
 									<li class="team-social-item">
 										<a href="" class="team-social-link">
 											<svg class="team-social-icon" width="20" height="20">
-												<use href="./images/symbol-defs.svg#icon-instagram"></use>
+												<use href="./images/icons.svg#icon-instagram"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="team-social-item">
 										<a href="" class="team-social-link"
 											><svg class="team-social-icon" width="20" height="20">
-												<use href="./images/symbol-defs.svg#icon-twitter"></use>
+												<use href="./images/icons.svg#icon-twitter"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="team-social-item">
 										<a href="" class="team-social-link"
 											><svg class="team-social-icon" width="20" height="20">
-												<use href="./images/symbol-defs.svg#icon-facebook"></use>
+												<use href="./images/icons.svg#icon-facebook"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="team-social-item">
 										<a href="" class="team-social-link"
 											><svg class="team-social-icon" width="20" height="20">
-												<use href="./images/symbol-defs.svg#icon-linkedin"></use>
+												<use href="./images/icons.svg#icon-linkedin"></use>
 											</svg>
 										</a>
 									</li>
@@ -240,28 +268,28 @@
 									<li class="team-social-item">
 										<a href="" class="team-social-link">
 											<svg class="team-social-icon" width="20" height="20">
-												<use href="./images/symbol-defs.svg#icon-instagram"></use>
+												<use href="./images/icons.svg#icon-instagram"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="team-social-item">
 										<a href="" class="team-social-link"
 											><svg class="team-social-icon" width="20" height="20">
-												<use href="./images/symbol-defs.svg#icon-twitter"></use>
+												<use href="./images/icons.svg#icon-twitter"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="team-social-item">
 										<a href="" class="team-social-link"
 											><svg class="team-social-icon" width="20" height="20">
-												<use href="./images/symbol-defs.svg#icon-facebook"></use>
+												<use href="./images/icons.svg#icon-facebook"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="team-social-item">
 										<a href="" class="team-social-link"
 											><svg class="team-social-icon" width="20" height="20">
-												<use href="./images/symbol-defs.svg#icon-linkedin"></use>
+												<use href="./images/icons.svg#icon-linkedin"></use>
 											</svg>
 										</a>
 									</li>
@@ -284,33 +312,82 @@
 									<li class="team-social-item">
 										<a href="" class="team-social-link">
 											<svg class="team-social-icon" width="20" height="20">
-												<use href="./images/symbol-defs.svg#icon-instagram"></use>
+												<use href="./images/icons.svg#icon-instagram"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="team-social-item">
 										<a href="" class="team-social-link"
 											><svg class="team-social-icon" width="20" height="20">
-												<use href="./images/symbol-defs.svg#icon-twitter"></use>
+												<use href="./images/icons.svg#icon-twitter"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="team-social-item">
 										<a href="" class="team-social-link"
 											><svg class="team-social-icon" width="20" height="20">
-												<use href="./images/symbol-defs.svg#icon-facebook"></use>
+												<use href="./images/icons.svg#icon-facebook"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="team-social-item">
 										<a href="" class="team-social-link"
 											><svg class="team-social-icon" width="20" height="20">
-												<use href="./images/symbol-defs.svg#icon-linkedin"></use>
+												<use href="./images/icons.svg#icon-linkedin"></use>
 											</svg>
 										</a>
 									</li>
 								</ul>
 							</div>
+						</li>
+					</ul>
+				</div>
+			</section>
+			<section class="section">
+				<div class="container clients-logo">
+					<h2 class="clients-title">Постоянные клиенты</h2>
+					<ul class="list clients-logo-list">
+						<li class="clients-logo-item">
+							<a href="" class="clients-logo-link" class="clients-logo-link">
+								<svg clients-logo-icon width="106" height="60">
+									<use href="./images/icons.svg#icon-Logo"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="clients-logo-item">
+							<a href="" class="clients-logo-link">
+								<svg clients-logo-icon width="106" height="60">
+									<use href="./images/icons.svg#icon-Logo-1"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="clients-logo-item">
+							<a href="" class="clients-logo-link">
+								<svg clients-logo-icon width="106" height="60">
+									<use href="./images/icons.svg#icon-Logo-2"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="clients-logo-item">
+							<a href="" class="clients-logo-link">
+								<svg clients-logo-icon width="106" height="60">
+									<use href="./images/icons.svg#icon-Logo-3"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="clients-logo-item">
+							<a href="" class="clients-logo-link">
+								<svg clients-logo-icon width="106" height="60">
+									<use href="./images/icons.svg#icon-Logo-4"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="clients-logo-item">
+							<a href="" class="clients-logo-link">
+								<svg clients-logo-icon width="106" height="60">
+									<use href="./images/icons.svg#icon-Logo-5"></use>
+								</svg>
+							</a>
 						</li>
 					</ul>
 				</div>
@@ -321,30 +398,65 @@
 
 		<footer class="footer">
 			<div class="container container-footer">
-				<a href="index.html" lang="en" class="logotype log-footer"
-					>Web<span class="logotype-secondary footer">Studio</span></a
-				>
-				<address class="footer-address">
-					<ul class="list">
-						<li class="list-footer-info">
-							<a
-								href="https://goo.gl/maps/YywnYqMMY18rzYBH6"
-								target="_blank"
-								rel="noreferrer noopener"
-								class="contacts-footer address"
-								>г. Киев, пр-т Леси Украинки, 26</a
-							>
+				<div class="footer-main-contacts">
+					<a href="index.html" lang="en" class="logotype log-footer"
+						>Web<span class="logotype-secondary footer">Studio</span></a
+					>
+					<address class="footer-address">
+						<ul class="list">
+							<li class="list-footer-info">
+								<a
+									href="https://goo.gl/maps/YywnYqMMY18rzYBH6"
+									target="_blank"
+									rel="noreferrer noopener"
+									class="contacts-footer address"
+									>г. Киев, пр-т Леси Украинки, 26</a
+								>
+							</li>
+							<li class="list-footer-info">
+								<a href="mailto:info@devstudio.com" lang="en" class="contacts-footer accent"
+									>info@devstudio.com</a
+								>
+							</li>
+							<li class="list-footer-info">
+								<a href="tel:+380961111111" class="contacts-footer accent">+38 096 111 11 11</a>
+							</li>
+						</ul>
+					</address>
+				</div>
+				<div class="footer-links">
+					<h2 class="footer-links-title">присоединяйтесь</h2>
+					<ul class="list footer-links-list">
+						<li class="footer-links-item">
+							<a class="footer-links-link" href="">
+								<svg class="footer-links-icon" width="20" height="20">
+									<use href="./images/icons.svg#icon-instagram"></use>
+								</svg>
+							</a>
 						</li>
-						<li class="list-footer-info">
-							<a href="mailto:info@devstudio.com" lang="en" class="contacts-footer accent"
-								>info@devstudio.com</a
-							>
+						<li class="footer-links-item">
+							<a class="footer-links-link" href="">
+								<svg class="footer-links-icon" width="20" height="20">
+									<use href="./images/icons.svg#icon-twitter"></use>
+								</svg>
+							</a>
 						</li>
-						<li class="list-footer-info">
-							<a href="tel:+380961111111" class="contacts-footer accent">+38 096 111 11 11</a>
+						<li class="footer-links-item">
+							<a class="footer-links-link" href="">
+								<svg class="footer-links-icon" width="20" height="20">
+									<use href="./images/icons.svg#icon-facebook"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="footer-links-item">
+							<a class="footer-links-link" href="">
+								<svg class="footer-links-icon" width="20" height="20">
+									<use href="./images/icons.svg#icon-linkedin"></use>
+								</svg>
+							</a>
 						</li>
 					</ul>
-				</address>
+				</div>
 			</div>
 		</footer>
 	</body>
