--- a/portfolio.html
+++ b/portfolio.html
@@ -94,73 +94,91 @@
 
 					<ul class="list porfolio">
 						<li class="image image-porfolio">
-							<img src="./images/img.jpg" alt="ноутбук" width="370" height="294" />
-							<div class="img-info-porfolio">
-								<h2 class="image-header">Технокряк</h2>
-								<p class="image-text">Веб-сайт</p>
-							</div>
+							<a href="" class="image-porfolio-link">
+								<img src="./images/img.jpg" alt="ноутбук" width="370" height="294" />
+								<div class="img-info-porfolio">
+									<h2 class="image-header">Технокряк</h2>
+									<p class="image-text">Веб-сайт</p>
+								</div>
+							</a>
 						</li>
 						<li class="image image-porfolio">
-							<img src="./images/img1.jpg" alt="игроки" width="370" height="294" />
-							<div class="img-info-porfolio">
-								<h2 lang="en" class="image-header">
-									Постер <span lang="en" class="image-header">New Orlean vs Golden Star</span>
-								</h2>
-								<p class="image-text">Дизайн</p>
-							</div>
+							<a href="" class="image-porfolio-link">
+								<img src="./images/img1.jpg" alt="игроки" width="370" height="294" />
+								<div class="img-info-porfolio">
+									<h2 lang="en" class="image-header">
+										Постер <span lang="en" class="image-header">New Orlean vs Golden Star</span>
+									</h2>
+									<p class="image-text">Дизайн</p>
+								</div>
+							</a>
 						</li>
 						<li class="image image-porfolio">
-							<img src="./images/img2.jpg" alt="логотип" width="370" height="294" />
-							<div class="img-info-porfolio">
-								<h2 class="image-header">
-									Ресторан <span lang="en" class="image-header">Seafood</span>
-								</h2>
-								<p class="image-text">Приложение</p>
-							</div>
+							<a href="" class="image-porfolio-link">
+								<img src="./images/img2.jpg" alt="логотип" width="370" height="294" />
+								<div class="img-info-porfolio">
+									<h2 class="image-header">
+										Ресторан <span lang="en" class="image-header">Seafood</span>
+									</h2>
+									<p class="image-text">Приложение</p>
+								</div>
+							</a>
 						</li>
 						<li class="image image-porfolio">
-							<img src="./images/img3.jpg" alt="наушники" width="370" height="294" />
-							<div class="img-info-porfolio">
-								<h2 class="image-header">Проект Prime</h2>
-								<p class="image-text">Маркетинг</p>
-							</div>
+							<a href="" class="image-porfolio-link">
+								<img src="./images/img3.jpg" alt="наушники" width="370" height="294" />
+								<div class="img-info-porfolio">
+									<h2 class="image-header">Проект Prime</h2>
+									<p class="image-text">Маркетинг</p>
+								</div>
+							</a>
 						</li>
 						<li class="image image-porfolio">
-							<img src="./images/img4.jpg" alt="коробки" width="370" height="294" />
-							<div class="img-info-porfolio">
-								<h2 class="image-header">
-									Проект <span lang="en" class="image-header">Boxes</span>
-								</h2>
-								<p class="image-text">Приложение</p>
-							</div>
+							<a href="" class="image-porfolio-link">
+								<img src="./images/img4.jpg" alt="коробки" width="370" height="294" />
+								<div class="img-info-porfolio">
+									<h2 class="image-header">
+										Проект <span lang="en" class="image-header">Boxes</span>
+									</h2>
+									<p class="image-text">Приложение</p>
+								</div>
+							</a>
 						</li>
 						<li class="image image-porfolio">
-							<img src="./images/img5.jpg" alt="монитор" width="370" height="294" />
-							<div class="img-info-porfolio">
-								<h2 lang="en" class="image-header">Inspiration has no Borders</h2>
-								<p class="image-text">Веб-сайт</p>
-							</div>
+							<a href="" class="image-porfolio-link">
+								<img src="./images/img5.jpg" alt="монитор" width="370" height="294" />
+								<div class="img-info-porfolio">
+									<h2 lang="en" class="image-header">Inspiration has no Borders</h2>
+									<p class="image-text">Веб-сайт</p>
+								</div>
+							</a>
 						</li>
 						<li class="image image-porfolio">
-							<img src="./images/img6.jpg" alt="книга" width="370" height="294" />
-							<div class="img-info-porfolio">
-								<h2 lang="en" class="image-header">Издание Limited Edition</h2>
-								<p class="image-text">Дизайн</p>
-							</div>
+							<a href="" class="image-porfolio-link"
+								><img src="./images/img6.jpg" alt="книга" width="370" height="294" />
+								<div class="img-info-porfolio">
+									<h2 lang="en" class="image-header">Издание Limited Edition</h2>
+									<p class="image-text">Дизайн</p>
+								</div>
+							</a>
 						</li>
 						<li class="image image-porfolio">
-							<img src="./images/img7.jpg" alt="эмблема" width="370" height="294" />
-							<div class="img-info-porfolio">
-								<h2 class="image-header">Проект <span lang="en">LAB</span></h2>
-								<p class="image-text">Маркетинг</p>
-							</div>
+							<a href="" class="image-porfolio-link">
+								<img src="./images/img7.jpg" alt="эмблема" width="370" height="294" />
+								<div class="img-info-porfolio">
+									<h2 class="image-header">Проект <span lang="en">LAB</span></h2>
+									<p class="image-text">Маркетинг</p>
+								</div>
+							</a>
 						</li>
 						<li class="image image-porfolio">
-							<img src="./images/img8.jpg" alt="печатает на ноутбуке" width="370" height="294" />
-							<div class="img-info-porfolio">
-								<h2 lang="en" class="image-header">Growing Business</h2>
-								<p class="image-text">Приложение</p>
-							</div>
+							<a href="" class="image-porfolio-link">
+								<img src="./images/img8.jpg" alt="печатает на ноутбуке" width="370" height="294" />
+								<div class="img-info-porfolio">
+									<h2 lang="en" class="image-header">Growing Business</h2>
+									<p class="image-text">Приложение</p>
+								</div>
+							</a>
 						</li>
 					</ul>
 				</div>
